# MarkovGameApproximation

./: .gitignore  LICENSE.md  README.md  Utilities.py  pyproject.toml  setup.cfg
Class/: FluidApproximation.py  MarkovGame.py  Qtable.py  Reinforcer.py  Simulator.py
mgap/: __init__.py
mgap/agents/: qtable.py  reinforcer.py
mgap/environments/: markov_game.py
mgap/environments/prisonnier_dilemma/: utilities.py
mgap/solvers/: fluid_approximation.py  simulator.py
