[metadata]
name = mgap
version = 0.1.0
description = Markov Game Approximation Library
long_description = file: README.md
long_description_content_type = text/markdown
author = Yann Kerzreho
author_email = your.email@example.com
url = https://github.com/yourusername/MarkovGameApproximation
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy

[options.packages.find]
include = mgap*
